--- a/MINDFUL.conf
+++ b/MINDFUL.conf
@@ -1,34 +1,8 @@
-[KDDCUP99]
-pathModels = models/KDDCUP99/
-pathPlot= plot/KDDCUP99/
-pathDataset = datasets/KDDCUP99/original/
-path = kddcup.data_10_percent_correctedaggregateOneCls
-pathTest = testaggregateOneCls
-testpath = KDDCUP
-pathDatasetNumeric=datasets/KDDCUP99/numeric/
-
-
-
-[UNSW_NB15]
-pathModels = models/UNSW_NB15/
-pathPlot= plot/UNSW_NB15/
-pathDataset = datasets/UNSW_NB15/original/
-path = UNSW_NB15_training-setaggregateOneCls
-pathTest = UNSW_NB15_testing-setaggregateOneCls
-testpath = UNSW_NB15
-pathDatasetNumeric=datasets/UNSW_NB15/numeric/
-
-
-
 [CICIDS2017]
 pathModels = models/CICIDS2017/
-pathPlot= plot/CICIDS2017/
-pathDataset = datasets/CICIDS2017/original/
-path = train_OneCls
-pathTest = test_OneCls
-testpath = CICIDS2017
-pathDatasetNumeric=datasets/CICIDS2017/numeric/
+testName = CICIDS2017
 label=Classification
+pathDataset=datasets/CICIDS2017/numeric/
 
 [AAGM]
 
@@ -39,18 +13,14 @@ path = AAGMTrain_OneCls
 pathTest = AAGMTest_OneCls
 testpath = AAGM
 pathDatasetNumeric=datasets/AAGM/numeric/
+label=classification
 
 
 
 
 
-[setting]
-N_CLASSES = 2
-PREPROCESSING1 = 0
-LOAD_AUTOENCODER_ADV = 1
-LOAD_AUTOENCODER_NORMAL=1
-LOAD_CNN= 1
-VALIDATION_SPLIT = .2
+
+
 
 
 
