--- a/MINDFUL.conf
+++ b/MINDFUL.conf
@@ -5,14 +5,8 @@ label=Classification
 pathDataset=datasets/CICIDS2017/numeric/
 
 [AAGM]
-
-pathModels = models/AAGM/
-pathPlot= plot/AAGM/
-pathDataset = datasets/AAGM/original/
-path = AAGMTrain_OneCls
-pathTest = AAGMTest_OneCls
-testpath = AAGM
-pathDatasetNumeric=datasets/AAGM/numeric/
+pathModels = models/AAGM17/
+pathDataset=datasets/AAGM17/
 label=classification
 
 
