--- a/MINDFUL.conf
+++ b/MINDFUL.conf
@@ -7,6 +7,7 @@ pathDataset=datasets/CICIDS2017/numeric/
 [AAGM]
 pathModels = models/AAGM17/
 pathDataset=datasets/AAGM17/
+testName=AAGM17
 label=classification
 
 
